fixed layout bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,7 @@
         @apply bg-gray-100 text-gray-500 p-4 font-Poppins lg:p-0;
     }
     .btn {
-        @apply inline-block font-medium px-4 py-3 rounded-md shadow-lg;
+        @apply inline-block font-medium px-4 py-3 rounded-md shadow-sm lg:shadow-md;
     }
     .focus {
         @apply rounded-md focus:outline-none focus:border-transparent focus:ring-2 focus:ring-purple-700 focus:ring-offset-2;
